Updated docker file