@@ -1,14 +1,11 @@
-FROM openjdk:17-slim
-
-RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
-    libgtk-3-0 \
-    openjfx \
-    && rm -rf /var/lib/apt/lists/*
-
+FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
-COPY target/FuelCalculator.jar .
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-CMD ["java", "--module-path", "/usr/share/openjfx/lib", \
-     "--add-modules", "javafx.controls,javafx.fxml", \
-     "-jar", "FuelCalculator.jar"]
+FROM eclipse-temurin:21-jre
+WORKDIR /app
+COPY --from=build /app/target/avgspd1_pod.jar app.jar
+EXPOSE 8081
+ENTRYPOINT ["java", "-jar", "app.jar"]
